cmake_minimum_required(VERSION 3.22)

cmake_policy(SET CMP0084 NEW)

project(
  ultron-server
  VERSION 1.0.0
  LANGUAGES CXX)

# C++ Properties
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Options
option(BUILD_TESTS "Build unit tests" OFF)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Libraries
include(FetchContent)
#┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐
#╎                                    Vnigma                                    ╎
#└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘
FetchContent_Declare(
  vnigma
  GIT_REPOSITORY
    https://github.com/Communication-and-Radionavigation-SPb/vnigma.git
  GIT_TAG v0.0.4)
FetchContent_GetProperties(vnigma)

if(NOT vnigma)
  FetchContent_Populate(vnigma)
  add_subdirectory(${vnigma_SOURCE_DIR} ${vnigma_BINARY_DIR} EXCLUDE_FROM_ALL)
endif()

#┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐
#╎                            SPDLog logging library                            ╎
#└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘
find_package(spdlog CONFIG REQUIRED)
#┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐
#╎                              ReactiveX library                               ╎
#└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘
find_package(rxcpp CONFIG REQUIRED)
#┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐
#╎                                 Lua library                                  ╎
#└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘
find_package(Lua REQUIRED)
#┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐
#╎                                Boost library                                 ╎
#└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘
find_package(Boost REQUIRED)
#┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐
#╎                                 Json library                                 ╎
#└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘
find_package(nlohmann_json CONFIG REQUIRED)

if(BUILD_TESTS)
  find_package(GTest CONFIG REQUIRED)
endif()

include(cmake/link_helpers.cmake)

# Own libraries
add_subdirectory(util)
add_subdirectory(core)
add_subdirectory(tcp)
add_subdirectory(lua)
add_subdirectory(actions/log)
add_subdirectory(adapters)

# Executable

add_executable(${PROJECT_NAME} main.cpp)

target_link_libraries(
  ${PROJECT_NAME}
  PRIVATE Boost::boost
          spdlog::spdlog
          rxcpp
          ${LUA_LIBRARIES}
          vnigma::vnigma
          Ultron::Core
          Ultron::Tcp
          Ultron::Lua::Engine
          Ultron::Adapters
          Ultron::Actions::Log)

target_include_directories(${PROJECT_NAME} PRIVATE ${LUA_INCLUDE_DIR})

add_executable(test_thing streaming_threads.cpp)
target_link_libraries(
  test_thing
  PRIVATE
    Boost::boost
    spdlog::spdlog
    ${LUA_LIBRARIES}
    Ultron::Util
    vnigma::vnigma
)
target_include_directories(test_thing PRIVATE ${LUA_INCLUDE_DIR})
